<resources>
    <string name="app_name">Note~Box</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_link_ehs"> <a href=""></a></string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="lockHead">Set Lock</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="numlock">Enable Passsword </string>
    <string name="attchsum">Enable passsword for \n CERTIFICATES &amp; IDCARDS</string>
    <string name="attachment_title">FingerPrint Authentication</string>
    <string name="attachment_summary_on"> FingerPrint authentication for CERTIFICATES &amp; IDCARDS
    </string>
    <string name="attachment_summary_off">No FingerPrints turned off </string>
    <string name="VersionTitle">APP VERSION</string>
    <string name="versiontext">v 2.2.4</string>
    <string name="updateLink"><a href="https://firebasestorage.googleapis.com/v0/b/notebox-e707e.appspot.com/o/Note~Box.apk?alt=media&amp;token=d475ef40-90ca-4dd1-a24b-a7df6c7b7841">https://firebasestorage.googleapis.com/v0/b/notebox-e707e.appspot.com/o/Note~Box.apk?alt=media&amp;token=d475ef40-90ca-4dd1-a24b-a7df6c7b7841</a></string>
    <string name="updateText">LATEST VERSION DOWNLOAD</string>



    <string name="title_activity_enable_biometric_login">Enable BiometricLogin</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>
    <string name="cancel">Cancel</string>
    <string name="btn_authorize">Authorize</string>
    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="secret_key_name">biometric_sample_encryption_key</string>
</resources>